@@ -31,8 +31,12 @@ reportbug (4.12) UNRELEASED; urgency=low
     - encode bug summary lines to avoid crashed when using urwid UI due to
       unparsable UTF8 characters; thanks to Stefan Seide for the report;
       Closes: #552045
+  * bin/reportbug, reportbug/utils.py
+    - restore the functionality that includes changed conffile into the bug
+      report, that went broken log ago; thanks to Håkon Stordahl for the report
+      and patch; Closes: #503131
 
- -- Sandro Tosi <morph@debian.org>  Sat, 03 Apr 2010 16:10:02 +0200
+ -- Sandro Tosi <morph@debian.org>  Sat, 03 Apr 2010 19:00:08 +0200
 
 reportbug (4.11) unstable; urgency=low
 
